# lightgbm-rust

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
examples/: advanced_usage.rs  basic_usage.rs
src/: error.rs  lib.rs  model.rs
