[package]
name = "lightgbm-rust"
version = "0.1.1"
edition = "2021"
description = "Rust bindings for LightGBM, a gradient boosting framework. Downloads LightGBM binaries at build time for cross-platform compatibility."
license = "Apache-2.0"
keywords = ["machine-learning", "gradient-boosting", "lightgbm", "ml"]
categories = ["science"]
readme = "README.md"
rust-version = "1.70"

[dependencies]
polars = { version = "0.45", optional = true, default-features = false }

[build-dependencies]
bindgen = "0.72.0"
ureq = "2.0"
zip = "2.2"

[features]
default = []
gpu = []
polars-support = ["polars"]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "advanced_usage"
path = "examples/advanced_usage.rs"

[[example]]
name = "polars_usage"
path = "examples/polars_usage.rs"
required-features = ["polars-support"]
